<resources>
    <string name="app_name">GroupB17-PuffCode</string>
    <string name="logintxt">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="text1">Dont Have An Account Yet?</string>
    <string name="signuphere">Sign Up Here</string>
    <string name="login">Enter</string>
    <string name="signuptxt">Register</string>
    <string name="email">Email</string>
    <string name="passwordCon">Retype Password</string>
    <string name="yesAccount">Already Have an Account?</string>
    <string name="loginhere">Login Here</string>
    <string name="signup">Sign Up</string>

    <!--C++ -->
    <string name="cpp_subtopic_1">Basics of C++</string>
    <string name="cpp_subtopic_2">Data Types</string>
    <string name="cpp_subtopic_3">Classes &amp; Objects</string>
    <string name="cpp_subtopic_4">Data Structures</string>

    <!--Java -->
    <string name="java_subtopic_1">Basic Syntax</string>
    <string name="java_subtopic_2">Basic Data Types</string>
    <string name="java_subtopic_3">Loop Control</string>
    <string name="java_subtopic_4">Methods</string>

    <!--PhP -->
    <string name="php_subtopic_1">PHP Syntax, Echo, Print</string>
    <string name="php_subtopic_2">Data Types</string>
    <string name="php_subtopic_3">Math Functions</string>
    <string name="php_subtopic_4">PHP if else elseif Statements</string>

    <!--Python -->
    <string name="python_subtopic_1">Python Syntax</string>
    <string name="python_subtopic_2">Data Types</string>
    <string name="python_subtopic_3">Python If ... Else</string>
    <string name="python_subtopic_4">Classes and Objects</string>


    <!-- String-array for News Title-->
    <string-array name="newsTitle">
        <item>Meta [NEWS18] </item>
        <item>QuantumAI [ScienceDaily] </item>
        <item>Games Coding [Techradar] </item>
        <item>Google PlayStore [Developer] </item>
        <item>Elon Musk on World Hunger [NBC News] </item>
        <item>Intel 12th Gen CPU [Peta Pixel] </item>
    </string-array>
    <!-- String-array for News Description-->
    <string-array name="newsDesc">
        <item>What is Metaverse and Why Facebook/ Meta Thinks its the Future of Internet</item>
        <item>Breakthrough proof clears path for quantum AI</item>
        <item>Itching to code? These are the best games to learn programming skills</item>
        <item>Google slashes its Play Store cut for more developers</item>
        <item>Elon Musk says he is willing to spend $6 billion to fight world hunger — on one condition</item>
        <item>Intel’s 12th Gen CPUs Show Impressive Performance for Photographers</item>
    </string-array>
    <!-- String-array for News Link-->
    <string-array name="newsLink">
        <item>https://www.news18.com/news/tech/explained-what-is-metaverse-and-why-facebook-meta-thinks-its-the-future-of-internet-4416881.html</item>
        <item>https://www.sciencedaily.com/releases/2021/10/211018154236.htm</item>
        <item>https://www.techradar.com/news/best-games-to-learn-programming-skills</item>
        <item>https://developer-tech.com/news/2021/oct/25/google-slashes-its-play-store-cut-for-more-developers/</item>
        <item>https://www.nbcnews.com/business/business-news/elon-musk-says-willing-spend-6-billion-fight-world-hunger-one-conditio-rcna4301</item>
        <item>https://petapixel.com/2021/11/05/intels-12th-gen-cpus-show-impressive-performance-for-photographers/</item>
    </string-array>

</resources>