<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_register_bg"
        tools:context=".Register">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/signuptxt"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textInputLayoutFullname"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:textColorHint="@color/white2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <EditText
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textEmailSubject"
            android:textColorHint="@color/white2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFullname"/>


        <EditText
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"/>

        <EditText
            android:id="@+id/textInputLayoutPasswordConfirm"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans"
            android:hint="@string/passwordCon"
            android:inputType="textPassword"
            android:textColorHint="@color/white2"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/yesAccount"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordConfirm"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/loginhere"
            android:textColor="@color/Grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginBottom="140dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/Grey"
            android:gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginText"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>